# hython-docker-image-builder

./: .gitignore  LICENSE  README.md  pyproject.toml  test_requirements.txt  tox.ini
.github/workflows/: build_houdini_image.yml  run_image_tests.yml  tests.yml
dockerfiles/: default_pip_packages.txt
dockerfiles/19.5/: Dockerfile
dockerfiles/20.0/: Dockerfile
dockerfiles/20.5/: Dockerfile
dockerfiles/21.0/: Dockerfile
dockerfiles/22.0/: Dockerfile  rezconfig.py
python/: sidefx.py
python/houdini_docker_builder/: builder.py
python/hython_docker_image_builder/: builder.py  docker.py
tests/: run_built_container_tests.bash
tests/python/: test_builder.py  test_docker.py
tests/python/data/: verify_checksum.txt
