[project]
name = "hython_docker_image_builder"

requires-python = ">=3.13"
dependencies = [
    "requests",
    "urllib3"
]

[dependency-groups]
    deps = ["requests", "urllib3"]
    docstrings = ["pydocstringformatter"]
    github = ["coverage", "tox"]
    isort = ["isort"]
    mypy = ["mypy[toml]", "types-requests", "types-PyYAML"]
    ruff = ["ruff"]
    test = ["pytest", "pytest_cov", "pytest_datadir", "pytest_mock", "pytest-subprocess"]

[tool.tox]
    env_list = ["py313", "ruff-check", "ruff-format-check", "isort-check", "mypy", "docstring-check"]
    labels = {test = ["py313"], static = ["ruff-check", "ruff-format-check", "isort-check", "mypy", "docstring-check"], fix = ["ruff-format-fix", "isort-run", "docstring-run"] }
    no_package = true

    [tool.tox.env.py313]
        allowlist_externals = ["echo"]
        dependency_groups = ["deps", "test"]
        set_env = {PYTHONPATH = "{toxinidir}/python"}
        commands = [["pytest", "tests/python"]]
        commands_post = [["echo", "View test coverage report at file://{toxinidir}/coverage_html_report/index.html"]]

    [tool.tox.env.ruff-check]
        dependency_groups = ["ruff"]
        commands = [[ "ruff", "check", "--preview", "bin/", "python/hython_docker_image_builder/", "tests/"]]

    [tool.tox.env.ruff-format-check]
        dependency_groups = ["ruff"]
        commands = [[ "ruff", "format", "--preview", "--check", "--diff", "bin/", "python/hython_docker_image_builder/", "tests/"]]

    [tool.tox.env.ruff-format-fix]
        dependency_groups = ["ruff"]
        commands = [[ "ruff", "format", "--preview", "bin/", "python/hython_docker_image_builder/", "tests/"]]

    [tool.tox.env.isort-check]
        dependency_groups = ["isort"]
        commands = [[ "isort", "--check", "bin/", "python/hython_docker_image_builder/", "tests/"]]

    [tool.tox.env.isort-run]
        dependency_groups = ["isort"]
        commands = [[ "isort", "bin/", "python/hython_docker_image_builder/", "tests/"]]

    [tool.tox.env.mypy]
        dependency_groups = ["deps", "mypy"]
        commands = [[ "mypy", "bin", "python/hython_docker_image_builder"]]

    [tool.tox.env.docstring-check]
        dependency_groups = ["docstrings"]
        commands = [[ "pydocstringformatter", "--exit-code", "bin/", "python/hython_docker_image_builder/"]]

    [tool.tox.env.docstring-run]
        dependency_groups = ["docstrings"]
        commands = [[ "pydocstringformatter", "--write", "bin/", "python/hython_docker_image_builder/"]]

[tool.pytest]
    addopts = ["--cov", "--cov-report=html", "--cov-report=xml", "--cov-fail-under=100", "--color=yes"]

[tool.coverage]
    [tool.coverage.html]
        directory = "coverage_html_report"
    [tool.coverage.report]
        exclude_lines = [
            # Have to re-enable the standard pragma
            "pragma: no cover",
            "def __repr__",
            "if TYPE_CHECKING",
        ]
        ignore_errors = true
        skip_empty = true

    [tool.coverage.run]
        branch = true
        source =  [
            "hython_docker_image_builder",
        ]
        omit = [
            "sidefx.py",
        ]
        disable_warnings = [
            "module-not-measured",
        ]

[tool.isort]
    profile = "black"
    src_paths = ["python"]
    sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
    import_heading_future = "Future"
    import_heading_stdlib = "Standard Library"
    import_heading_thirdparty = "Third Party"
    import_heading_firstparty = "hython_docker_image_builder"
    dedup_headings = true
    indented_import_headings = false

[tool.mypy]
    disallow_incomplete_defs = true
    disallow_untyped_calls = true
    disallow_untyped_defs = true
    follow_imports = "skip"

[tool.ruff]
    line-length = 120

    [tool.ruff.lint]
        extend-select = [
            "E",  # pycodestyle
            "W",  # pycodestyle
            "UP", # pyupgrade
            "D",  # pydocstyle
            "F",  # Pyflakes
            "PL",  # Pylint
            "RSE",  # flake8-raise
            "B",  # flake8-bugbear
            "PT",  #  flake8-pytest-style
            "C90",  #  mccabe
            "TRY",  #  tryceratops
            "FLY",  #  flynt
            "PERF",  #  Perflint
            "LOG",  #  flake8-logging
            "BLE",  # flake8-blind-except
            "A",  # flake8-builtins
            "C4",  # flake8-comprehensions
            "RET",  # flake8-return
            "SIM",  # flake8-simplify
            "TCH",  # flake8-type-checking
            "PTH",  # flake8-use-pathlib
            "RUF",  # Ruff specific
            "FBT",  # flake8-boolean-trap
            "FURB",  # refurb
            "PYI",  # flake8-pyi
        ]
        ignore = [
            "D104",  # Missing docstring in public module
            "D105",  # Missing docstring in magic method
            "D107",  # Missing docstring in __init__
            "TRY003",  # Exception long messages
            "I001",  # Import sort order conflicts with isort
        ]

    [tool.ruff.lint.per-file-ignores]
        "plugin.py" = [
            "F401",  # Module level import not at top of file
        ]
        "tests/*.py" = [
            "PLR2004",  # Magic value in comparison
            "PLR6301",  # 'no-self-use' for tests
            "PLR0913", # Too many arguments
            "PLR0917", # Too many positional arguments
            "PT006",  # tuple for parametrized names
            "PT007",  # tuple for parametrized values
        ]

    [tool.ruff.lint.pydocstyle]
        convention = "google"
